# intention-learning

./: .gitignore  README.md  pyproject.toml
data/buffers/26154fb8/: judgment.pt
data/buffers/e3359666/: judgment.pt
data/buffers/e40be892/: judgment.pt
data/models/20241001140543/: actor.pth  actor_target.pth  critic1.pth  critic1_target.pth  critic2.pth  critic2_target.pth
data/models/26154fb8/: terminal.pth
data/models/e3359666/: TerminalNetwork.pth
data/models/e40be892/: terminal.pth
random/: compare_embed.py  embed_e5.py  hand.py  llm_embed_7b.py  llm_torch.py  old_llm.py  test_arm.py
src/intention_learning/: __init__.py  agent.py  data.py  img.py  judge.py  old_img.py  old_judge.py  old_train.py  play.py  terminal.py  train.py
tests/: clip.py  embed_e5.py  llm.py  llm_embed.py  llm_embed_7b.py  test_judge.py  test_terminal.py
