[project]
name = "intention-learning"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Armaan Abraham", email = "armaanabraham@g.ucla.edu" }
]
dependencies = [
    "torch>=2.4.1",
    "numpy>=2.1.1",
    "mistral-inference>=1.4.0",
    "huggingface-hub>=0.25.0",
    "transformers>=4.44.2",
    "sentencepiece>=0.2.0",
    "accelerate>=0.34.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/intention_learning"]
