[project]
name = "intention-learning"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Armaan Abraham", email = "armaanabraham@g.ucla.edu" }
]
dependencies = [
    "torch>=2.4.1",
    "numpy>=2.1.1",
    "mistral-inference>=1.4.0",
    "huggingface-hub>=0.25.0",
    "transformers>=4.45.1",
    "sentencepiece>=0.2.0",
    "accelerate>=0.34.2",
    "pip>=24.2",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
    "gymnasium[classic-control]>=0.29.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/intention_learning"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Unused arguments
    "ARG",
]
